Added Entity class
Added an entity class so I can have one class who controls multiple classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ add_definitions(
 add_library(common
 	common/camera.h
 	common/camera.cpp
+	common/entity.h
+	common/entity.cpp
 	common/player.h
 	common/player.cpp
 	common/renderer.h
